# applications-hackaton

./: .gitignore  architecture.md  astute.md  claude initial convo.txt  enrichment.md  pipeline.mermaid  stadsmission_pipelines.html  streamlit_app.py
app-proj/: .env.example  .gitignore  README.md  pyproject.toml
app-proj/scripts/: embed_column.py  ingest_stiftelser.py
app-proj/src/app_proj/embed/: chunk_embed.py
app-proj/src/app_proj/ingest/: load_postgres.py  parse_json.py
