[project]
name = "app-proj"
version = "0.1.0"
description = "Länsstyrelsen stiftelser ingest + embed pipeline for grant matching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "orjson>=3.10",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "adbc-driver-postgresql>=1.0",
    "adbc-driver-manager>=1.0",
    "pyarrow>=17.0",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app_proj"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
